# frank-cpc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  capture_serial.py  flash.sh  release.sh
.test/: exolon.dsk  exolon_corrupted.dsk  pop_corrupted.dsk
capture/: audio_raw.f32  av_capture.mkv
drivers/: HDMI.c  HDMI.h  HDMI_audio.c  HDMI_tv.c  HDMI_vga.c  HDMI_vga_hstx.c  audio.c  audio.h  crash_handler.c  crash_handler.h  psram_allocator.c  psram_allocator.h  psram_dlmalloc.h  psram_init.c  psram_init.h  test_pins.c  uart_logging.c  uart_logging.h  usbhid_wrapper.h
drivers/disphstx/: CMakeLists.txt
drivers/fatfs/: CMakeLists.txt  ffsystem.c
drivers/ps2/: CMakeLists.txt  ps2.c  ps2kbd_wrapper.c  ps2kbd_wrapper.h
drivers/pwm_audio/: pwm_audio.c  pwm_audio.h
drivers/sdcard/: CMakeLists.txt
drivers/tv/: CMakeLists.txt  tv-software.c  tv_mem.h  tv_rename.h
drivers/usbhid/: CMakeLists.txt  usbhid_wrapper.c
rom/: droyal12.rom
src/: LICENSE.txt  aysound.c  aysound.h  board_config.h  board_m1.h  board_m2.h  board_z0.h  colors.c  colors.h  cpc.c  cpc.h  cpc_adapter.cpp  cpc_adapter.h  cpc_cartridge.cpp  cpc_cartridge.h  cpc_dandanator.cpp  cpc_dandanator.h  cpc_ipf.cpp  cpc_ipf.h  cpc_ipf_io.c  defines.h  dialogs.c  dialogs.h  disc.c  disc.h  io.c  io.h  keyboard.c  keyboard.h  mem.c  mem.h  printer.c  printer.h  processor.c  rcfile.c  screen.c  screen.h  screenpos.c  screenpos.h  snapshot.c  (+8 more)
src/Pico/: cpc_autotype.c  cpc_autotype.h  cpc_boot.c  cpc_boot.h  cpc_compat.h  cpc_loader.c  cpc_loader.h  cpc_serial_console.c  cpc_serial_console.h  cpc_settings.c  cpc_settings.h  cpc_tape_loader.c  cpc_tape_loader.h  cpc_ui.c  cpc_ui.h  main.c  platform.c  ui_draw.c  ui_draw.h  ui_font.c
src/Z80/: Codes.h  CodesED.h  Debug.c  LICENSE.txt  Tables.h  Z80.c  Z80.h  z80_arm.S
src/cap32/: asic.cpp  asic.h  cap32.cpp  cap32.h  crtc.cpp  crtc.h  disk.cpp  disk.h  fdc.cpp  psg.cpp  tape.cpp  tape.h  tape_fastload.cpp  tape_fastload.h  types.h  z80.cpp  z80.h
src/capsimg/CAPSImg/: DiskImageFactory.cpp  stdafx.cpp  stdafx.h
src/capsimg/Codec/: DiskEncoding.cpp
src/capsimg/Core/: CommonTypes.h
tools/: cpc_console.py
